--- a/default.hbs
+++ b/default.hbs
@@ -43,9 +43,9 @@
                 <div class="gh-head-actions">
                     <button class="gh-search gh-icon-btn" data-ghost-search>{{> "icons/search"}}</button>
                     {{#unless @member}}
-                        <a class="gh-head-btn gh-btn gh-primary-btn" href="#/portal/signup" data-portal="signup">Subscribe</a>
+                        <a class="gh-head-btn gh-btn gh-primary-btn" href="#/portal/signup" data-portal="signup">Suscribirme</a>
                     {{else}}
-                        <a class="gh-head-btn gh-btn" href="#/portal/account" data-portal="account">Account</a>
+                        <a class="gh-head-btn gh-btn" href="#/portal/account" data-portal="account">Perfil</a>
                     {{/unless}}
                 </div>
             </div>
@@ -60,19 +60,19 @@
                 {{^if @member.paid}}
                     <section class="gh-subscribe">
                         {{^if @member}}
-                            <h3 class="gh-subscribe-title">Subscribe to {{@site.title}}</h3>
+                            <h3 class="gh-subscribe-title">Suscríbete to {{@site.title}}</h3>
 
                             {{#if @custom.email_signup_text}}
                                 <div class="gh-subscribe-description">{{@custom.email_signup_text}}</div>
                             {{/if}}
 
-                            <button class="gh-subscribe-btn gh-btn" data-portal="signup">{{> "icons/email"}} Subscribe now</button>
+                            <button class="gh-subscribe-btn gh-btn" data-portal="signup">{{> "icons/email"}} Suscribirme</button>
                         {{else}}
-                            <h3 class="gh-subscribe-title">Ready for unlimited access?</h3>
+                            <h3 class="gh-subscribe-title">Listo para acceso sin limites? </h3>
 
-                            <div class="gh-subscribe-description">Upgrade to a paid account to get full access to all content.</div>
+                            <div class="gh-subscribe-description">Consigue a una cuenta de pago para obtener acceso completo a todo el contenido.</div>
 
-                            <button class="gh-subscribe-btn gh-btn" data-portal="account/plans">Upgrade now</button>
+                            <button class="gh-subscribe-btn gh-btn" data-portal="account/plans">Subir de nivel</button>
                         {{/if}}
                     </section>
                 {{/if}}
