Fix translate text

--- a/default.hbs
+++ b/default.hbs
@@ -60,7 +60,7 @@
                 {{^if @member.paid}}
                     <section class="gh-subscribe">
                         {{^if @member}}
-                            <h3 class="gh-subscribe-title">Suscríbete to {{@site.title}}</h3>
+                            <h3 class="gh-subscribe-title">Suscríbete a {{@site.title}}</h3>
 
                             {{#if @custom.email_signup_text}}
                                 <div class="gh-subscribe-description">{{@custom.email_signup_text}}</div>
