--- a/home.hbs
+++ b/home.hbs
@@ -5,7 +5,7 @@
         <section class="gh-topic gh-topic-grid">
             <h2 class="gh-topic-name">
                 {{#match pagination.pages ">" 1}}
-                    <a href="{{@site.url}}/page/2">Más reciente</a>
+                    <a href="{{@site.url}}/page/2">Reciente</a>
                 {{else}}
                     Más reciente
                 {{/match}}
