--- a/index.hbs
+++ b/index.hbs
@@ -3,7 +3,7 @@
 <main class="gh-main gh-outer">
     <div class="gh-inner">
         <section class="gh-pagehead">
-            <h1 class="gh-pagehead-title">Reciente</h1>
+            <h1 class="gh-pagehead-title">Recientes</h1>
         </section>
 
         {{#get "posts" include="authors" limit="all"}}
