--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,4 +1,19 @@
 @font-face {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 400;
+    src: local(""), url("../fonts/lato-v22-latin-regular.woff2") format("woff2"), url("../fonts/lato-v22-latin-regular.woff") format("woff");
+}
+
+@font-face {
+    font-family: Sora;
+    font-style: normal;
+    font-weight: 600;
+    src: local(""), url("../fonts/lato-v11-latin-600.woff2") format("woff2"), url("../fonts/sora-v11-latin-600.woff") format("woff");
+}
+
+
+@font-face {
     font-family: Inter;
     font-style: normal;
     font-weight: 400;
